--- a/Sito Scout/index.html
+++ b/Sito Scout/index.html
@@ -47,7 +47,7 @@
               <a class="nav-link" href="#testimonials">FOTO</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#cta">Download</a>
+              <a class="nav-link" href="#cta">MOTTO</a>
             </li>
           </ul>
 
